Get rid of javax.xml.bind.DatatypeConverter
Bundle Robert Harder's Base64 implementation [1] instead of using
javax.xml.bind.DatatypeConverter to do base64 decoding since
Android doesn't package JAXB.

[1] http://iharder.sourceforge.net/current/index.html